--- a/css/styles.css
+++ b/css/styles.css
@@ -164,15 +164,22 @@ body {
     flex-direction: column;
   
     justify-content: center;
+
+    height: 10rem;
+
     margin-bottom: 2rem;
+
   }
   
   .categorias, .lista_categorias {
     width: 100%;
+    height: 10rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+
+    margin-bottom: 0;
 
   
     list-style: none;
@@ -180,11 +187,9 @@ body {
     padding: 0%;
   }
 
-  .categorias, .lista_categorias li{
-    margin-bottom: 2.5rem;
-  }
+ 
   
-  .nutricion_cat {
+  .lista_categorias .nutricion_cat {
     padding: 1rem 2.7rem;
     background-color: #badce3;
   }
@@ -193,6 +198,7 @@ body {
     padding: 1rem 2.7rem;
     background-color: #c1d8dd;
   }
+
   
   .desarrollo_cat {
     padding: 1rem 2rem;
@@ -216,6 +222,10 @@ body {
   
   .categorias, .lista_categorias li a{
     font-weight: bold;
+  }
+
+  .col-md-10{
+    margin-top: 1.7rem !important;
   }
 
 }
